--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ img {
   padding: 25px 0;
 }
 
-#carousel-wrapper {
+.carousel-wrapper {
   position: relative;
   max-width: 1000px;
   height: 90vh;
@@ -19,8 +19,28 @@ img {
   border: 1px solid black;
 }
 
+/* Buttons */
+.cs-btn {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgba(220, 220, 220, 0.561);
+}
+
+#right-btn {
+  right: 30px;
+}
+
+#left-btn {
+  left: 30px;
+}
+
+
 /* carousel-main */
-.carousel-main {
+#carousel-main {
   width: 100%;
   height: 80%;
   text-shadow: 1px 1px 2px black;
@@ -49,13 +69,13 @@ img {
 
 /* carousel-index */
 
-.carousel-index {
+#carousel-index {
   width: 100%;
   height: 20%;
   display: flex;
 }
 
-.carousel-index >* {
+#carousel-index >* {
   width: 20%;
   height: 100%;
   filter: grayscale(0.8);
@@ -66,7 +86,7 @@ img {
   display:block;
 }
 
-.carousel-index >*.active {
+#carousel-index >*.active {
   filter: grayscale(0);
   border: 3px solid rgba(0, 55, 255, 0.488);
 }
